--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/commands/RemoveFromContainerCommand.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/commands/RemoveFromContainerCommand.vm
@@ -2,15 +2,15 @@
 #* @vtlvariable name="helper" type="org.kevoree.modeling.kotlin.generator.ProcessorHelper" *#
 package ${ctx.basePackageForUtilitiesGeneration}.container
 
-class RemoveFromContainerCommand(val target : org.kevoree.modeling.api.KMFContainer, val mutatorType : org.kevoree.modeling.api.util.ActionType, val refName : String, val element : Any?) {
+class RemoveFromContainerCommand(val target : org.kevoree.modeling.api.KObject, val mutatorType : org.kevoree.modeling.api.util.ActionType, val refName : String, val element : Any?) {
     fun run() {
 
 #if($ctx.persistence)
-        var casted = target as KMFContainerPersistenceImpl#if($ctx.timeAware)<*>#end
+        var casted = target as KObjectPersistenceImpl#if($ctx.timeAware)<*>#end
 
         if(!casted.inResolution){
             if(element!= null) {
-                (element as KMFContainerPersistenceImpl#if($ctx.timeAware)<*>#end).originFactory!!.elementsToBeRemoved.add((element as KMFContainerImpl).path())
+                (element as KObjectPersistenceImpl#if($ctx.timeAware)<*>#end).originFactory!!.elementsToBeRemoved.add((element as KObjectImpl).path())
             }
             if(!target.isDeleted()){
                 target.reflexiveMutator(mutatorType,refName, element,true,true)
